# planar_3_link_robot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  task.cpp  task.hpp
tests/: CMakeLists.txt
tests/src/: kinematics_tests.cpp
